# RRM_zadanie4

./: PartOne.xlsx  README.md  compile_commands.json  linkNaGithub
src/eigen_example/: CMakeLists.txt
src/eigen_example/src/: eigen_example.cpp
src/ik_solver_example/: CMakeLists.txt
src/ik_solver_example/src/: ik_solver_example.cpp
src/robot/abb_irb4600_60_205_ikfast/: CMakeLists.txt
src/robot/abb_model/: CMakeLists.txt
src/robot/abb_moveit_config/: CMakeLists.txt
src/trajectory_visualization/: CMakeLists.txt  graph.py  hodnoty.txt
src/trajectory_visualization/src/: DerivativeMatrix.cpp  DerivativeMatrix.hpp  trajectory_visualization.cpp
